Update the Piaware container for Debian 11. Includes a hack to get around a dependency problem.

--- a/piaware/Dockerfile
+++ b/piaware/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:buster-slim AS base
+FROM debian:11-slim AS base
 LABEL maintainer="https://github.com/chrismeller"
 
 EXPOSE 30105 30106 8080
@@ -9,12 +9,12 @@ ENV RECEIVER_PORT=30005
 ENV RECEIVER_MLAT_PORT=30104
 ENV DUMP978_ENABLED=false
 
-ARG PERM_INSTALL="tini net-tools tcllib tclx8.4 tcl8.6 itcl3 libssl1.1 libboost-filesystem1.67.0 libboost-program-options1.67.0 libboost-regex1.67.0 libboost-system1.67.0 libexpat1 libreadline7"
+ARG PERM_INSTALL="tini net-tools tcllib tclx8.4 tcl8.6 itcl3 libssl1.1 libboost-filesystem-dev libboost-program-options-dev libboost-regex-dev libboost-system-dev libexpat1 libreadline-dev libmpdec-dev"
 RUN apt-get update && apt-get install -y ${PERM_INSTALL} && apt-get clean && apt-get autoclean && apt-get autoremove
 
 FROM base AS buildstep
 
-ARG TEMP_INSTALL="wget build-essential git debhelper autoconf python3-dev tcl8.6-dev tcl-dev python3-venv libz-dev dh-systemd openssl libssl-dev libboost-system-dev libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev"
+ARG TEMP_INSTALL="wget build-essential git debhelper autoconf python3-dev tcl8.6-dev tcl-dev python3-venv libz-dev openssl libssl-dev libboost-system-dev libboost-program-options-dev libboost-regex-dev libboost-filesystem-dev"
 RUN apt-get update && apt-get install -y ${TEMP_INSTALL} && apt-get clean && apt-get autoclean && apt-get autoremove
 
 RUN apt-get install -y chrpath
@@ -27,6 +27,8 @@ RUN cd tcltls-rebuild && dpkg -i tcl-tls_*.deb
 
 WORKDIR /tmp
 RUN git clone https://github.com/flightaware/piaware_builder.git
+# fix a bad dependency that we're waiting on a pull request to fix
+RUN cd piaware_builder && sed -i 's/dh-systemd, //g' buster/control
 RUN cd piaware_builder && ./sensible-build.sh buster
 RUN cd piaware_builder/package-buster && dpkg-buildpackage -b --no-sign
 
